DT-255: Attempt to match on forename and surname with both search terms